fixing z-index of view menu

--- a/app/styles/layout/topbar.scss
+++ b/app/styles/layout/topbar.scss
@@ -6,5 +6,5 @@
 	width:100%;
 	background-color:$dark-grey;
 	color:$white;
-	z-index:3;
+	z-index:5;
 }
